--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -1,7 +1,7 @@
 <div class="content-wrapper">
   <div class="card">
     <div class="card-content">
-      <div class="tournament-top">
+      <div class="tournament-grid">
         <div class="tournament-top-left">
           <h1>Tabelle</h1>
             <div class="standings">
@@ -86,8 +86,6 @@
             </tr>
           </table>
         </div>
-      </div>
-      <div class="tournament-bottom">
         <div class="tournament-bottom-right">
           bottom right
         </div>
