--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 html, body {
+    height: 100%;
+    margin: 0;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 }
@@ -10,7 +12,6 @@ html {
 }
 
 body {
-    margin: 0;
     background: #29303f;
 }
 
@@ -46,7 +47,7 @@ h1 {
 }
 
 .card-content {
-    height: 655px;
+    height: 715px;
 }
 
 
