--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -90,7 +90,7 @@
           bottom right
         </div>
         <div class="tournament-bottom-left">
-          bottom left
+          bottom left comes here
         </div>
       </div>
     </div>
