--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -66,31 +66,608 @@
             </tr>
             <tr>
               <td>Spieler 1</td>
-              <td>Team 1</td>
+              <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
                 <td>Spieler 2</td>
-                <td>Team 2</td>
+                <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
                 <td>Spieler 3</td>
-                <td>Team 3</td>
+                <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
                 <td>Spieler 4</td>
-                <td>Team 4</td>
+                <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
                 <td>Spieler 5</td>
-                <td>Team 5</td>
+                <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
           </table>
         </div>
         <div class="tournament-bottom-right">
-          bottom right
+            <h1 class="h1-rowTwo">Hinrunde</h1>
+            <table>
+              <tr>
+                <th>
+                  Nr
+                </th>
+                <th>
+                  Spieler 1
+                </th>
+                <th>
+                  vs
+                </th>
+                <th>
+                  Spieler 2
+                </th>
+                <th>
+                  Tore S1
+                </th>
+                <th>
+                  : 
+                </th>
+                <th>
+                  Tore S2
+                </th>
+                <th>
+                  Pause
+                </th>
+              </tr>
+              <tr>
+                <td>
+                  1
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  3
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  4
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  5
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  6
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  7
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  8
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  9
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  10
+                </td>
+                <td>
+                  Spieler 1
+                </td>
+                <td>
+                  vs
+                </td>
+                <td>
+                  Spieler 2
+                </td>
+                <td>
+                  3
+                </td>
+                <td>
+                  :
+                </td>
+                <td>
+                  2
+                </td>
+                <td>
+                  Spieler 3
+                </td>
+              </tr>
+            </table>
         </div>
         <div class="tournament-bottom-left">
-          bottom left comes here
+          <h1 class="h1-rowTwo">Rückrunde</h1>
+          <table>
+            <tr>
+              <th>
+                Nr
+              </th>
+              <th>
+                Spieler 1
+              </th>
+              <th>
+                vs
+              </th>
+              <th>
+                Spieler 2
+              </th>
+              <th>
+                Tore S1
+              </th>
+              <th>
+                : 
+              </th>
+              <th>
+                Tore S2
+              </th>
+              <th>
+                Pause
+              </th>
+            </tr>
+            <tr>
+              <td>
+                11
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                12
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                13
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                14
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                15
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                16
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                17
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                18
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                19
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+            <tr>
+              <td>
+                20
+              </td>
+              <td>
+                Spieler 1
+              </td>
+              <td>
+                vs
+              </td>
+              <td>
+                Spieler 2
+              </td>
+              <td>
+                3
+              </td>
+              <td>
+                :
+              </td>
+              <td>
+                2
+              </td>
+              <td>
+                Spieler 3
+              </td>
+            </tr>
+              
+          </table>
         </div>
       </div>
     </div>
