--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -5,7 +5,7 @@
         <div class="tournament-top-left">
           <h1>Tabelle</h1>
             <div class="standings">
-              <table>
+              <table class="tournament-table standings-table">
                 <tr>
                   <th>Rang</th>
                   <th>Spieler</th>
@@ -59,7 +59,7 @@
         </div>
         <div class="tournament-top-right">
           <h1>Teams</h1>
-          <table>
+          <table class="tournament-table teams-table">
             <tr>
               <th>Spieler</th>
               <th>Team</th>
@@ -88,7 +88,7 @@
         </div>
         <div class="tournament-bottom-right">
             <h1 class="h1-rowTwo">Hinrunde</h1>
-            <table>
+            <table class="tournament-table roster-table">
               <tr>
                 <th>
                   Nr
@@ -379,7 +379,7 @@
         </div>
         <div class="tournament-bottom-left">
           <h1 class="h1-rowTwo">Rückrunde</h1>
-          <table>
+          <table class="tournament-table roster-table">
             <tr>
               <th>
                 Nr
