--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -129,13 +129,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -155,13 +155,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -181,13 +181,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -207,13 +207,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -233,13 +233,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -259,13 +259,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -285,13 +285,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -311,13 +311,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -337,13 +337,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -363,13 +363,13 @@
                   Spieler 2
                 </td>
                 <td>
-                  3
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   :
                 </td>
                 <td>
-                  2
+                  <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
                   Spieler 3
@@ -420,13 +420,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -446,13 +446,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -472,13 +472,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -498,13 +498,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -524,13 +524,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -550,13 +550,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -576,13 +576,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -602,13 +602,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -628,13 +628,13 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
@@ -654,19 +654,18 @@
                 Spieler 2
               </td>
               <td>
-                3
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 :
               </td>
               <td>
-                2
+                <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
                 Spieler 3
               </td>
             </tr>
-              
           </table>
         </div>
       </div>
