--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -103,13 +103,13 @@
                   Spieler 2
                 </th>
                 <th>
-                  Tore S1
+                  Tore
                 </th>
                 <th>
                   : 
                 </th>
                 <th>
-                  Tore S2
+                  Tore
                 </th>
                 <th>
                   Pause
@@ -394,13 +394,13 @@
                 Spieler 2
               </th>
               <th>
-                Tore S1
+                Tore
               </th>
               <th>
                 : 
               </th>
               <th>
-                Tore S2
+                Tore
               </th>
               <th>
                 Pause
