--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ input {
     display: block;
     border:none;
     background: none;
-    border-bottom:1px solid #232a34;
+    border-bottom:1px solid #363f4c;
 
     color: #fff;
     font-size: 18px;
