--- a/src/app/tournament/tournament.component.css
+++ b/src/app/tournament/tournament.component.css
@@ -50,19 +50,35 @@ table.tournament-table th {
     text-align: left;
     color: #1180f0;
 }
-
+/*----------------standings-table-styling START-----------*/
 .standings-table{
     width: 95%;
 }
 
+table.standings-table tr:nth-child(2),
+table.standings-table tr:nth-child(4),
+table.standings-table tr:nth-child(6)
+{
+    background-color: #212732;
+}
+/*----------------standings-table-styling END-------------*/
+
+/*------------------team-table-styling Start--------------*/
 .teams-table{
     width: 70%;
 }
 
+table.teams-table tr:nth-child(2),
+table.teams-table tr:nth-child(4),
+table.teams-table tr:nth-child(6)
+{
+    background-color: #212732;
+}
+/*------------------team-table-styling END----------------*/
+
 /*----------------roster-table-styling START--------------*/
 .roster-table {
     width: 95%;
-    border-spacing: 0;
 }
 
 .table-input-roster {
