adds player labels and colors

--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-content">
       <div class="tournament-grid">
-        <div class="tournament-top-left">
+        <div>
           <h1>Tabelle</h1>
             <div class="standings">
               <table class="tournament-table standings-table">
@@ -57,7 +57,7 @@
               </table>
             </div>
         </div>
-        <div class="tournament-top-right">
+        <div>
           <h1>Teams</h1>
           <table class="tournament-table teams-table">
             <tr>
@@ -65,28 +65,28 @@
               <th>Team</th>
             </tr>
             <tr>
-              <td>Spieler 1</td>
+              <td><label class="chris">Chris</label></td>
               <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
-                <td>Spieler 2</td>
+                <td><label class="timo">Timo</label></td>
                 <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
-                <td>Spieler 3</td>
+                <td><label class="julien">Julien</label></td>
                 <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
-                <td>Spieler 4</td>
+                <td><label class="flo">Flo</label></td>
                 <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
             <tr>
-                <td>Spieler 5</td>
+                <td><label class="bene">Bene</label></td>
                 <td><input type="text" value="" (blur)="update(team)" class="table-input"></td>
             </tr>
           </table>
         </div>
-        <div class="tournament-bottom-right">
+        <div>
             <h1 class="h1-rowTwo">Hinrunde</h1>
             <table class="tournament-table roster-table">
               <tr>
@@ -377,7 +377,7 @@
               </tr>
             </table>
         </div>
-        <div class="tournament-bottom-left">
+        <div>
           <h1 class="h1-rowTwo">Rückrunde</h1>
           <table class="tournament-table roster-table">
             <tr>
