--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -411,13 +411,13 @@
                 11
               </td>
               <td>
-                Spieler 1
+                <label class="chris">Chris</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="timo">Timo</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -429,7 +429,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="bene">Bene</label>
               </td>
             </tr>
             <tr>
@@ -437,13 +437,13 @@
                 12
               </td>
               <td>
-                Spieler 1
+                <label class="flo">Flo</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="julien">Julien</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -455,7 +455,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="bene">Bene</label>
               </td>
             </tr>
             <tr>
@@ -463,13 +463,13 @@
                 13
               </td>
               <td>
-                Spieler 1
+                <label class="julien">Julien</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="bene">Bene</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -481,7 +481,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="timo">Timo</label>
               </td>
             </tr>
             <tr>
@@ -489,13 +489,13 @@
                 14
               </td>
               <td>
-                Spieler 1
+                <label class="chris">Chris</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="flo">Flo</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -507,7 +507,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="timo">Timo</label>
               </td>
             </tr>
             <tr>
@@ -515,13 +515,13 @@
                 15
               </td>
               <td>
-                Spieler 1
+                <label class="timo">Timo</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="flo">Flo</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -533,7 +533,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="julien">Julien</label>
               </td>
             </tr>
             <tr>
@@ -541,13 +541,13 @@
                 16
               </td>
               <td>
-                Spieler 1
+                <label class="chris">Chris</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="bene">Bene</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -559,7 +559,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="julien">Julien</label>
               </td>
             </tr>
             <tr>
@@ -567,13 +567,13 @@
                 17
               </td>
               <td>
-                Spieler 1
+                <label class="chris">Chris</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="julien">Julien</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -585,7 +585,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="flo">Flo</label>
               </td>
             </tr>
             <tr>
@@ -593,13 +593,13 @@
                 18
               </td>
               <td>
-                Spieler 1
+                <label class="timo">Timo</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="bene">Bene</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -611,7 +611,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="flo">Flo</label>
               </td>
             </tr>
             <tr>
@@ -619,13 +619,13 @@
                 19
               </td>
               <td>
-                Spieler 1
+                <label class="julien">Julien</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="timo">Timo</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -637,7 +637,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="chris">Chris</label>
               </td>
             </tr>
             <tr>
@@ -645,13 +645,13 @@
                 20
               </td>
               <td>
-                Spieler 1
+                <label class="flo">Flo</label>
               </td>
               <td>
                 vs
               </td>
               <td>
-                Spieler 2
+                <label class="bene">Bene</label>
               </td>
               <td>
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -663,7 +663,7 @@
                 <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
               </td>
               <td>
-                Spieler 3
+                <label class="chris">Chris</label>
               </td>
             </tr>
           </table>
