adds players to the standings table and to the roster round 1 table

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-wrapper">
   <div class="header-title">
-      FIFA Tournament Manager
+      FIFA Turnier Manager
   </div>
 </div>
