--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -16,43 +16,43 @@
                 </tr>
                 <tr>
                   <td>1</td>
-                  <td>Spieler 1</td>
-                  <td>10</td>
-                  <td>2</td>
-                  <td>8</td>
-                  <td>12</td>
+                  <td><label class="chris">Chris</label></td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td>Spieler 2</td>
-                  <td>8</td>
-                  <td>5</td>
-                  <td>3</td>
-                  <td>9</td>
+                  <td><label class="timo">Timo</label></td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td>Spieler 3</td>
-                  <td>7</td>
-                  <td>9</td>
-                  <td>-2</td>
-                  <td>6</td>
+                  <td><label class="julien">Julien</label></td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
                 </tr>
                 <tr>
                   <td>4</td>
-                  <td>Spieler 4</td>
-                  <td>5</td>
-                  <td>9</td>
-                  <td>-4</td>
-                  <td>4</td>
+                  <td><label class="flo">Flo</label></td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
                 </tr>
                 <tr>
                   <td>5</td>
-                  <td>Spieler 5</td>
-                  <td>4</td>
-                  <td>9</td>
-                  <td>-5</td>
-                  <td>1</td>
+                  <td><label class="bene">Bene</label></td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
                 </tr>
               </table>
             </div>
@@ -120,13 +120,13 @@
                   1
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="chris">Chris</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="timo">Timo</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -138,7 +138,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="bene">Bene</label>
                 </td>
               </tr>
               <tr>
@@ -146,13 +146,13 @@
                   2
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="flo">Flo</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="julien">Julien</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -164,7 +164,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="bene">Bene</label>
                 </td>
               </tr>
               <tr>
@@ -172,13 +172,13 @@
                   3
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="julien">Julien</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="bene">Bene</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -190,7 +190,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="timo">Timo</label>
                 </td>
               </tr>
               <tr>
@@ -198,13 +198,13 @@
                   4
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="chris">Chris</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="flo">Flo</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -216,7 +216,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="timo">Timo</label>
                 </td>
               </tr>
               <tr>
@@ -224,13 +224,13 @@
                   5
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="timo">Timo</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="flo">Flo</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -242,7 +242,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="julien">Julien</label>
                 </td>
               </tr>
               <tr>
@@ -250,13 +250,13 @@
                   6
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="chris">Chris</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="bene">Bene</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -268,7 +268,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="julien">Julien</label>
                 </td>
               </tr>
               <tr>
@@ -276,13 +276,13 @@
                   7
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="chris">Chris</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="julien">Julien</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -294,7 +294,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="flo">Flo</label>
                 </td>
               </tr>
               <tr>
@@ -302,13 +302,13 @@
                   8
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="timo">Timo</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="bene">Bene</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -320,7 +320,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="flo">Flo</label>
                 </td>
               </tr>
               <tr>
@@ -328,13 +328,13 @@
                   9
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="julien">Julien</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="timo">Timo</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -346,7 +346,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="chris">Chris</label>
                 </td>
               </tr>
               <tr>
@@ -354,13 +354,13 @@
                   10
                 </td>
                 <td>
-                  Spieler 1
+                  <label class="flo">Flo</label>
                 </td>
                 <td>
                   vs
                 </td>
                 <td>
-                  Spieler 2
+                  <label class="bene">Bene</label>
                 </td>
                 <td>
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
@@ -372,7 +372,7 @@
                   <input type="text" value="" (blur)="updateResult(matchResult)" class="table-input-roster">
                 </td>
                 <td>
-                  Spieler 3
+                  <label class="chris">Chris</label>
                 </td>
               </tr>
             </table>
